# wagtail-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: v0.5-tracking.md
.github/workflows/: ci.yml  docs.yml
docs/: changelog.md  configuration.md  getting-started.md  index.md  standalone.md
docs/operations/: audit.md  otel.md  tokens.md
docs/toolsets/: collections-snippets.md  index.md  media.md  pages-query.md  pages-write.md  redirects.md  seo.md  workflow.md
src/wagtail_mcp_server/: __init__.py  apps.py  auth.py  cli.py  mcp.py  models.py  otel.py  registry.py  schema.py  settings.py  signals.py  urls.py
src/wagtail_mcp_server/management/commands/: mcp_introspect.py  mcp_issue_token.py  mcp_prune_audit.py  mcp_revoke_token.py  mcp_serve.py
src/wagtail_mcp_server/migrations/: 0001_initial.py
src/wagtail_mcp_server/serializers/: __init__.py  document.py  image.py  page.py  page_ref.py  streamfield.py
src/wagtail_mcp_server/standalone/: __init__.py  serve.py  settings.py  urls.py
src/wagtail_mcp_server/toolsets/: __init__.py  collections_query.py  media.py  pages_query.py  pages_write.py  redirects.py  seo_query.py  seo_write.py  snippets_query.py  workflow.py
tests/: conftest.py  settings.py  test_app_imports.py  test_collections_query.py  test_http_endpoint.py  test_mcp_prune_audit.py  test_media.py  test_page_serializer.py  test_page_type_schema.py  test_pages_query.py  test_pages_write.py  test_redirects.py  test_seo_query.py  test_seo_write.py  test_settings_resolver.py  test_snippets_query.py  test_standalone.py  test_standalone_subprocess.py  test_streamfield_deserialize.py  test_streamfield_envelope.py  test_streamfield_walk.py  test_workflow.py  urls.py
tests/testapp/: __init__.py  apps.py  models.py
tests/testapp/migrations/: 0001_initial.py  0002_testauthor.py
