[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-mcp-server"
dynamic = ["version"]
description = "Expose a Wagtail CMS as a Model Context Protocol (MCP) server for AI agents"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [{ name = "Deku Studios", email = "alex@dekustudios.com" }]
keywords = ["wagtail", "mcp", "llm", "ai", "agents", "cms", "django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.0,<5.2",
    "wagtail>=7.3.1,<8.0",
    "django-mcp-server>=0.3,<1.0",
    "pydantic>=2.9,<3.0",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
    "wagtail-factories>=4.2,<5.0",
]
# Documentation site (built and deployed via .github/workflows/docs.yml).
# Pinned to a Material major so a theme refactor upstream can't break
# the build out from under us between v0.5 and v0.6.
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "pymdown-extensions>=10.7,<11.0",
]

[project.urls]
Homepage = "https://github.com/Deku-Studios/wagtail-mcp-server"
Repository = "https://github.com/Deku-Studios/wagtail-mcp-server"
Issues = "https://github.com/Deku-Studios/wagtail-mcp-server/issues"
Discussions = "https://github.com/Deku-Studios/wagtail-mcp-server/discussions"

[project.scripts]
wagtail-mcp-server = "wagtail_mcp_server.cli:main"
# v0.5: zero-config standalone runtime. Bundles its own SQLite settings
# module so `pip install wagtail-mcp-server && wagtail-mcp-serve --stdio`
# works without writing a Django project.
wagtail-mcp-serve = "wagtail_mcp_server.standalone.serve:_cli_entry"

[tool.hatch.version]
path = "src/wagtail_mcp_server/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wagtail_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "SIM", "DJ"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"**/migrations/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
